--- a/resume.tex
+++ b/resume.tex
@@ -23,10 +23,7 @@
 \setlength{\multicolsep}{-3.0pt}
 \setlength{\columnsep}{-1pt}
 \input{glyphtounicode}
-\usepackage{ragged2e}
 
-\usepackage{xcolor}
-\hypersetup{colorlinks,urlcolor=blue}
 
 %----------FONT OPTIONS----------
 % sans-serif
@@ -34,10 +31,12 @@
 % \usepackage[sfdefault]{roboto}
 % \usepackage[sfdefault]{noto-sans}
 % \usepackage[default]{sourcesanspro}
+\usepackage{xcolor}
+\hypersetup{colorlinks,urlcolor=blue}
 
 % serif
 % \usepackage{CormorantGaramond}
-\usepackage{charter}
+% \usepackage{charter}
 
 
 \pagestyle{fancy}
@@ -69,15 +68,10 @@
 
 %-------------------------
 % Custom commands
+
 \newcommand{\resumeItem}[1]{
   \item\small{
     {#1 \vspace{-2pt}}
-  }
-}
-
-\newcommand{\achievementItem}[1]{
-  \item\small{
-    {#1 \vspace{-6pt}}
   }
 }
 
@@ -105,7 +99,7 @@
 \newcommand{\resumeProjectHeading}[2]{
     \item
     \begin{tabular*}{1.001\textwidth}{l@{\extracolsep{\fill}}r}
-      \small#1 & \textbf{\small #2} \\
+      \small#1 & \textbf{\small #2}\\
     \end{tabular*}\vspace{-7pt}
 }
 
@@ -116,8 +110,8 @@
 
 \newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=0.0in, label={}]}
 \newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
-\newcommand{\resumeItemListStart}{\justify \begin{itemize}}
-\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-2pt}}
+\newcommand{\resumeItemListStart}{\begin{itemize}}
+\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 
 %-------------------------------------------
 %%%%%%  RESUME STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -126,19 +120,14 @@
 \begin{document}
 
 %----------HEADING----------
-% \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-%   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-%   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
-% \end{tabular*}
 
 \begin{center}
-    {\Huge \scshape Jai Kumar Dewani} \\ \vspace{1pt}
-    % 123 Street Name, Town, State 12345 \\ 
-    \vspace{5pt}
-    \small \raisebox{-0.1\height}\faPhone\ 9340422023 ~ 
-    \raisebox{-0.2\height}\faEnvelope\ \href{mailto:jai.dewani.99@gmail.com}{ jai.dewani.99@gmail.com} ~ 
-    \raisebox{-0.2\height}\faLinkedin\ \href{https://www.linkedin.com/in/jai-dewani/}{ linkedin.com/in/jai-dewani}  ~
-    \raisebox{-0.2\height}\faGithub\ \href{https://github.com/jai-dewani}{ github.com/jai-dewani}
+    {\Huge \scshape Rutvik Joshi} \\ \vspace{1pt}
+    % Mumbai, India \\ \vspace{1pt}
+    \faGlobe \href{https://rutvik-j.github.io/home}{\raisebox{-0.1\height}\ \underline{rutvik-j.com}} ~
+    \faEnvelope \href{mailto:rutvikj77@outlook.com}{\raisebox{-0.2\height}\  \underline{rutvikj77@outlook.com}} ~ 
+    \faLinkedin \href{https://linkedin.com/in/rutvikjoshi/}{\raisebox{-0.2\height}\ \underline{linkedin.com/in/rutvikjoshi}}  ~
+    \faGithub \href{https://github.com/RutvikJ77}{\raisebox{-0.2\height}\ \underline{github.com/RutvikJ77}}
     \vspace{-8pt}
 \end{center}
 
@@ -147,111 +136,121 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {International Institute of Information Technology, Naya Raipur}{August '17 -- June '21}
-      {Bachelor of Technology in Computer Science}{Naya Raipur, Chattisghar India}
+      {University of Mumbai}{2018 -- 2022}
+      {Bachelor of Engineering in Computer Engineering(CGPA - 9.67/10)}{Mumbai, India}
   \resumeSubHeadingListEnd
 
+%------RELEVANT COURSEWORK-------
+% \section{Relevant Coursework}
+%     %\resumeSubHeadingListStart
+%         \begin{multicols}{4}
+%             \begin{itemize}[itemsep=-5pt, parsep=3pt]
+%                 \item\small Data Structures
+%                 \item Software Methodology
+%                 \item Algorithms Analysis
+%                 \item Database Management
+%                 \item Artificial Intelligence
+%                 \item Internet Technology
+%                 \item Systems Programming
+%                 \item Computer Architecture
+%             \end{itemize}
+%         \end{multicols}
+%         \vspace*{2.0\multicolsep}
+%     %\resumeSubHeadingListEnd
+
+
+%-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Carl Zeiss}{July '21 -- Present}
-      {Software Engineer}{Bengaluru, Karnataka, India}
-      \vspace{-7pt}
+      {Polygon Technology}{July 2021 -- Present}
+      {Marketing Analyst}{Bangalore, KA}
       \resumeItemListStart
-        \resumeItem{Utilized design patterns while improving upon various existing Eye charts implimentations using WPF while resolving memory leaks}
-        \resumeItem{Worked on securing a video streaming service while minimizing re-render load on system}
+        \resumeItem{Responsible for generating market research reports and monitoring social media analytics with data-first mindset.}
+        \resumeItem{Accelerated social media engagement by \textbf{270\%} over multiple channels through statistical analysis in MSExcel. Identified and informed 4 KPIs leveraging the narrative and company position in Blockchain communities.}
+        \resumeItem{Reported the insights to the CMO raising a \textbf{propelling shift} to the marketing strategy. Additionally, developed an internal Webapp using python to monitor user insights, aiding with multiple design strategies for campaigns.}
+        \resumeItem{Analysed \textbf{Decentralised Finance} projects developed on Polygon using SQL to showcase the actual user growth on the main network bringing in a change to the campaign strategies through appealing dashboards.}
       \resumeItemListEnd
 
     \resumeSubheading
-      {Carl Zeiss}{January '21 -- June '21}
-      {FullStack Intern}{Bengaluru, Karnataka, India}
-      \vspace{-7pt}
+      {BlueLearn(previously Clinify)}{Jan 2021 -- Sept 2021}
+      {Data Analyst}{Community}
       \resumeItemListStart
-        \resumeItem{Implemented various new methods, which were exposed as APIs using .NET framework to be utilised by frontend}
-        \resumeItem{Created and deployed new gRPC servers for reducing coupling and introduce inter-processes communication channel between different services}
-        \resumeItem{Utilized NUnit unit-testing framework and Fluent Assertions library for writing new unit test cases to improve the development and reduce turn around time in testing}
-      \resumeItemListEnd
-
-    % \resumeSubheading
-    %   {Directi}{May ’19 -- June ’19}
-    %   {Workshop Trainer Intern}{Naya Raipur, Chattisghar, India}
-    %   \vspace{-7pt}
-    %   \resumeItemListStart
-    %     \resumeItem{Trained  18  school  students  about  Python  programming  using  code  visualization  techniques  in  CodeChef sponsored summer camp of 2 weeks}
-    %     \resumeItem{Learned and improved upon various pedagogy techniques while improving the course content}
-    % \resumeItemListEnd
+        \resumeItem{Efficiently lead the Engagement team with Data proof mindset and presented community insights to VP.}
+        \resumeItem{Identified 5 key metrics from statistical community analysis and up scaled experience for \textbf{25,000}+ members. Formulated 10 key sectors of community growth through hypothesis}
+        \resumeItem{Proposed enhanced on-boarding processes through UX methodologies, \textbf{escalating user retention} by 20\%. Facilitated \textbf{visual reports} and dashboards to stakeholders improving idea implementation strategies by 33\%.}
+    \resumeItemListEnd
     
   \resumeSubHeadingListEnd
+\vspace{-16pt}
 
 %-----------PROJECTS-----------
 \section{Projects}
     \vspace{-5pt}
     \resumeSubHeadingListStart
-        \resumeProjectHeading
-            {\textbf{Meme Generator} $|$ \emph{JavaScript, React}  $|$ \href{https://jai-dewani.github.io/Meme-App/}{WebApp}}{September 2020}
-            \resumeItemListStart
-                \resumeItem{Designed easy to use single page interface for creating memes}
-                \resumeItem{Utilized Canvas display logic for presenting editable images for users to add and drag text over to create memes}
-                \resumeItem{Built features for the ease of downloading memes and upload custom images for your custom memes}
-            \resumeItemListEnd
-        \resumeProjectHeading
-            {\textbf{DeepNeural Net Visualiser} $|$ \emph{Tensorflow, Flask, Streamlit} $|$ \href{https://visualize-neural-network.herokuapp.com/}{WebApp}}{June 2020} 
-            \resumeItemListStart
-                \resumeItem{Built a webapp for easier visualisation of hidden layers in a Neural Net in real-time}
-                \resumeItem{Utilised Streamlit to create a clean frontend design to update the model layer by layer}
-                \resumeItem{Deployed the project on free-tier Heroku service to be easily accessible by anyone}
-            \resumeItemListEnd 
-        \resumeProjectHeading
-            {\textbf{FunMark} $|$ \emph{Python} $|$ \href{https://github.com/jai-dewani/fun-mark}{GitHub}}{May 2020} 
-            \resumeItemListStart
-                \resumeItem{Developed a wrapper library for bench-marking different functions and allowing creation of graphical comparisons}
-                \resumeItem{Released on PyPi package manager to be easily accessible with pip with currently over 2K downloads}
-                \resumeItem{Wrote a blog on how to utilise the library efficiently \href{https://jai-dewani.github.io/blogs/fun-mark/}{jai-dewani.github.io/blogs/fun-mark/}}
-            \resumeItemListEnd 
-        \resumeProjectHeading
-            {\textbf{Lab Works} $|$ \emph{HTML, CSS, Js, Bootstrap, Django, SQLite} $|$ \href{https://github.com/jai-dewani/Lab-Works}{GitHub}}{April 2019} 
-            \resumeItemListStart
-                \resumeItem{Built a web platform to ease the lab assessments for technical courses involving standard coding problems }
-                \resumeItem{Devised a solution regarding issues with the manual process of lab assistants checking each submission manually}
-                \resumeItem{Used 3rd party API which provides a safe enviroment to compile and run code while supporting wide range programming languages}
-                % \resumeItem{Enabled  Professors to  create coding questions and add test cases.}
-                % \resumeItem{Used JDoodle’s API to compile student’s programs and check them against predefined test cases.}
-            \resumeItemListEnd 
+      \resumeProjectHeading
+          {\href{https://github.com/RutvikJ77/Resume-aid}{\textbf{\underline{Resume-Aid}}} $|$ \emph{Python, Streamlit, Spacy,}}{}
+          \resumeItemListStart
+            \resumeItem{Extracted social media influenced stocks and interpreted their impact using \textbf{Natural Language Processing} techniques.}
+            \resumeItem{Plotted a simulated graph of sentiments using matplotlib with \textbf{92\% positive} responses.}
+          \resumeItemListEnd
+          \vspace{-13pt}
+      \resumeProjectHeading
+          {\href{https://github.com/RutvikJ77/Citi-Bike-Analysis}{\textbf{\underline{Citi Bike Report}}} $|$ \emph{Jupyter Notebook, Seaborn, Matplotlib}}{}
+          \resumeItemListStart
+            \resumeItem{Analyzed and reported \textbf{3.3 million} records of Citi Bike consumer usage before and during the pandemic.}
+            \resumeItem{Visualized and developed a report using python libraries with 76\% positive forecast.}
+            % \resumeItem{}
+          \resumeItemListEnd 
+          \vspace{-13pt}
+          \resumeProjectHeading
+              {\href{https://github.com/RutvikJ77/ExAncient}{\textbf{\underline{ExAncient}}} $|$ \emph{Python, Flask, Tensorflow, SciKit-Learn}}{}
+          \resumeItemListStart
+            \resumeItem{Imparted an experience of ancient style paintings with user input photographs using \textbf{Image Style Transfer} technique.}
+            \resumeItem{Generate a romantic story based on the Photograph using \textbf{Convolutional Neural Network} and a caption model generator with \textbf{95\% accuracy}.}
+            % \resumeItem{}
+          \resumeItemListEnd 
     \resumeSubHeadingListEnd
+\vspace{-15pt}
 
 
 %
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
-    {\item{
-     \textbf{Languages}{: Python, JavaScript, C\#} \\
-     \vspace{1pt}
-     \textbf{Developer Tools}{: Heroku, Git, GitHub, Adobe Illustrator, CI/CD (GitHub Actions) } \\
-     \vspace{1pt}
-     \textbf{Technologies}{: ASP.NET, WPF, gRPC, Node.js, React, Express, Bootstrap, Passport, Django} \\
+    \small{\item{
+     \textbf{Languages \& Databases} {: Python, R, C++, Java, Javascript, SQL, PostgreSQL, MySQL} \\
+     \textbf{Developer Tools}{: VS Code, Tableau, Microsoft Office, Google suite, Git, Notion} \\
+     \textbf{Technologies/Frameworks}{: Tensorflow, Numpy, Pandas, Sci-kit learn, Seaborn, Matplotlib, Google Cloud Platform} \\
+     \textbf{Soft Skills}{: Management, Creativity, Research, Story telling, Teamwork}\\
     }}
  \end{itemize}
  \vspace{-16pt}
+ 
+% \section{rSection}{Techical Skills}
 
+%     \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
+%     Technical Skills & Python, R, C++, Java, Javascript.\\
+%     Tools & Tableau, Microsoft Office, Google suite, Git, Notion.\\
+%     Databases & SQL, PostgreSQL, MySQL.\\
+%     Libraries & Tensorflow, Numpy, Pandas, Sci-kit learn, Seaborn, Matplotlib.\\
+%     Platforms & Google Cloud Platform, Heroku.\\
+%     Soft Skills & Management, Creativity, Research, Story telling, Teamwork.\\
+%     \end{tabular}
+% \end{rSection}
+ 
 
 
 %-----------INVOLVEMENT---------------
-\section{ACADEMIC ACHIEVEMENTS \& EXTRA-CURRICULAR}
-
-\begin{itemize}[leftmargin=0.2in]
-  \achievementItem{\textbf{Co-founded}  the  first  technical  club  at  IIIT-NR,  organized  various  events, talks and hackathons to  promote competitive programming and development while improve the coding environment of the Institute.}
-  \achievementItem{Ranked \textbf{1127\textsuperscript{th}} globally and \textbf{115\textsuperscript{th}} in India in Google HashCode, out of 10724 teams}
-  \achievementItem{Qualified ACM-ICPC 2020 in Kanpur(\textbf{rank 63}) and Gwalior regions}
-  \achievementItem{Qualified ACM-ICPC 2019 in Kharagpur(\textbf{rank 81}) and Amritapuri(\textbf{rank 37}) regions.}
-  \achievementItem{Successfully cleared the Foundation level in \textbf{CCDSAP Certification} CodeChef.}
-  \achievementItem{Recipient of {\bf Google India Challenge Scholarship '17 Phase-1} under Udacity Nanodegree program}
-  \achievementItem{Qualified CodeChef’s Snackdown with a rank of \textbf{2587 out of 27875}  teams}
-  \achievementItem{Ranked {\bf 3\textsuperscript{rd} in Codeutsava 2020} 2020, NIT Raipur’s Annual Hackathon out of 30 participating teams}
-\end{itemize}
-        
-    % \resumeSubHeadingListEnd
+\section{Achievements and Extra-Curricular Activities}
+    \resumeItemListStart
+        \resumeItem{\textbf{Awarded Best Beginner Hack} and \textbf{Best International Team} at Kent Hack Enough Hackathon 2020.}
+        \resumeItem{Awarded \textbf{Best Data Science} project at TheGoldenHack 2021 and overall \textbf{First} from 130+ projects at MLH DataDayGrind 2.0. }
+        \resumeItem{Ranked in \textbf{Top 20\%} at \textbf{Qiskit Quantum India Challenge}.}
+        \resumeItem{Mentored at North Texas's largest Hackathon \textbf{HackUTD}VII Seas and at \textbf{Hack The North} Canada's Largest Hackathon in the domain of Data Science and Analytics. Lead a team of 4 at more than 15+ hackathons.}
+        \resumeItem{Volunteered and promoted the agenda of \textbf{RIO+25} program held by \textbf{United Nations Sustainable Development group} to 45 students.}
+    \resumeItemListEnd
 
 
 \end{document}
