chore: Update resume.tex

--- a/resume.tex
+++ b/resume.tex
@@ -5,7 +5,7 @@
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{Rutvik Joshi} % Your name
 % You can merge both of these into a single line, if you do not have a website.
-\address{ \\ Halifax, CA} 
+\address{ Halifax, CA} 
 \address{\href{mailto:rutvik.j@dal.ca}{Rutvik.J@dal.ca} \\ \href{https://linkedin.com/in/rutvikjoshi}{linkedin.com/in/RutvikJoshi} \\
 \href{https://github.com/RutvikJ77}{github.com/RutvikJ77}}
 
