chore: Update resume.tex

--- a/resume.tex
+++ b/resume.tex
@@ -6,7 +6,7 @@
 \name{Rutvik Joshi} % Your name
 % You can merge both of these into a single line, if you do not have a website.
 \address{ Halifax, CA} 
-\address{\href{mailto:rutvik.j@dal.ca}{Rutvik.J@dal.ca} \\ \href{https://linkedin.com/in/rutvikjoshi}{linkedin.com/in/RutvikJoshi} \\
+\address{\href{mailto:rutvikj77@outlook.com}{Rutvikj77@outlook.com} \\ \href{https://linkedin.com/in/rutvikjoshi}{linkedin.com/in/RutvikJoshi} \\
 \href{https://github.com/RutvikJ77}{github.com/RutvikJ77}}
 
 \begin{document}
@@ -123,7 +123,7 @@ BlueLearn(prev. Clinify) \hfill \textit{Community(Volunteering)}
 
 \href{https://github.com/RutvikJ77/Resume-aid}{\textbf{\underline{Resume-Aid}}} $|$\textit{ Python, Streamlit, Spacy}
 \begin{itemize}
-    \item Achieved accurate resume analysis and insightful scoring by developing a web application in Python, leveraging Spacy. Employed RAKE and cosine similarity to identify relevant keywords, resulting in enhanced accuracy and relevance for better candidate evaluation.
+    \item Achieved accurate resume analysis and insightful scoring by developing a web application in Python, leveraging Spacy for enhanced accuracy and relevance on candidate evaluation.
     % \item  {Analyzed Resumes to provide accurate insights and scores using RAKE and cosine similarity for particular words which co-relate with the presented job description.}
     % \item{Gather a list of \textbf{top 10} phrases and words from resume and generate top 20 importance and similarity list to calculate the final score and display it through a web application.}
 \end{itemize}
